--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Monitora"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".ListaUsuariosActivity"
             android:exported="false" />
