--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Monitora"
         tools:targetApi="31">
         <activity
+            android:name=".ListaAparelhosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroAparelhoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ListaUsuariosActivity"
             android:exported="false" />
         <activity
@@ -22,7 +28,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +60,6 @@
             android:name=".DatabaseHelper"
             android:label="Gerencia o banco de dados"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-
     </application>
 
 </manifest>
