--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -22,8 +26,7 @@
         <activity
             android:name=".ListaUsuariosActivity"
             android:exported="false" />
-        <activity
-            android:name=".ListaUsuariosActivity"
+        <activity android:name=".BluetoothActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
