Ajustes Comunicação Bluetotth 2023_04_11

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,15 @@ plugins {
 
 android {
     namespace 'com.teconsis.monitora'
-    compileSdk 33
-    compileSdkVersion 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.teconsis.monitora"
-        minSdk 24
-        targetSdk 33
+        minSdk 17
+        targetSdk 34
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -34,22 +33,27 @@ android {
     packagingOptions {
         resources.excludes.add("META-INF/*")
     }
+    defaultConfig {
+        multiDexEnabled true
+    }
 
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "org.xerial:sqlite-jdbc:3.34.0"
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.sun.mail:android-mail:1.6.7'
     implementation 'com.sun.mail:android-activation:1.6.7'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
