--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     implementation 'com.sun.mail:android-mail:1.6.7'
     implementation 'com.sun.mail:android-activation:1.6.7'
     implementation 'androidx.multidex:multidex:2.0.1'
-
+    implementation 'androidx.annotation:annotation:1.7.0'
+    implementation 'androidx.annotation:annotation-jvm:1.7.0'
 }
